math-core/src/snapshots/math_core__tests__align.snap
---
source: math-core/src/lib.rs
expression: "\\begin{align} f ( x ) &= x^2 + 2 x + 1 \\\\ &= ( x + 1 )^2\\end{align}"
---
<math>
    <mtable displaystyle="true">
        <mtr>
            <mtd style="text-align: -webkit-right;text-align: -moz-right;padding-right: 0;">
                <mi>f</mi>
                <mo stretchy="false">(</mo>
                <mi>x</mi>
                <mo stretchy="false">)</mo>
            </mtd>
            <mtd style="text-align: -webkit-left;text-align: -moz-left;padding-left: 0;">
                <mo>=</mo>
                <msup>
                    <mi>x</mi>
                    <mn>2</mn>
                </msup>
                <mo>+</mo>
                <mn>2</mn>
                <mi>x</mi>
                <mo>+</mo>
                <mn>1</mn>
            </mtd>
        </mtr>
        <mtr>
            <mtd style="text-align: -webkit-right;text-align: -moz-right;padding-right: 0;">
            </mtd>
            <mtd style="text-align: -webkit-left;text-align: -moz-left;padding-left: 0;">
                <mo>=</mo>
                <mo stretchy="false">(</mo>
                <mi>x</mi>
                <mo>+</mo>
                <mn>1</mn>
                <msup>
                    <mo stretchy="false">)</mo>
                    <mn>2</mn>
                </msup>
            </mtd>
        </mtr>
    </mtable>
</math>
