math-core/src/snapshots/math_core__tests__ampersand_outside_array.snap
---
source: math-core/src/lib.rs
expression: x & y
---
Position: 2
CannotBeUsedHere {
    got: Ampersand,
    correct_place: TableEnv,
}
