math-core/src/snapshots/math_core__tests__array_center_lines.snap
---
source: math-core/src/lib.rs
expression: "\\begin{array}{ |c| |cc| } 1 & 2 & 3\\\\ 4 & 5 & 6 \\end{array}"
---
<math>
    <mtable style="border-left: 1px solid black">
        <mtr>
            <mtd style="border-right: 1px solid black">
                <mn>1</mn>
            </mtd>
            <mtd style="border-right: 1px solid black; padding-left: 0.2em; padding-right: 0.2em"></mtd><mtd>
                <mn>2</mn>
            </mtd>
            <mtd style="border-right: 1px solid black">
                <mn>3</mn>
            </mtd>
        </mtr>
        <mtr>
            <mtd style="border-right: 1px solid black">
                <mn>4</mn>
            </mtd>
            <mtd style="border-right: 1px solid black; padding-left: 0.2em; padding-right: 0.2em"></mtd><mtd>
                <mn>5</mn>
            </mtd>
            <mtd style="border-right: 1px solid black">
                <mn>6</mn>
            </mtd>
        </mtr>
    </mtable>
</math>
