math-core/src/snapshots/math_core__tests__colon_alone_group.snap
---
source: math-core/src/lib.rs
expression: "x{:}x"
---
<math>
    <mi>x</mi>
    <mo lspace="0" rspace="0">:</mo>
    <mi>x</mi>
</math>
